--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "preline": "^2.5.1",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
