--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "flowbite-react": "^0.10.2",
+    "motion": "^11.15.0",
     "preline": "^2.5.1",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
